fixes: horizontal scrolling

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -19,6 +19,7 @@ body {
   // background-color: #505e4d;
   background-color: #000;
   color: white;
+  overflow-x: hidden;
 }
 
 ::selection {
